--- a/src/GIMI-ModManager.WinUI/Views/Settings/SettingsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Settings/SettingsPage.xaml
@@ -3,9 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:controls1="using:CommunityToolkit.WinUI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:l="using:WinUI3Localizer"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="using:CommunityToolkit.WinUI.UI"
     xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     xmlns:xaml="using:Microsoft.UI.Xaml"
     xmlns:xaml1="using:GIMI_ModManager.WinUI.Helpers.Xaml"
@@ -262,6 +264,15 @@
                         l:Uids.Uid="/Settings/ModUpdateCheckerDescription" />
 
                 </StackPanel>
+
+                <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="Commands" />
+                <controls1:SettingsCard
+                    Command="{x:Bind ViewModel.NavigateToCommandsSettingsCommand}"
+                    Description="Commands (scripts) can be defined and then be run on specified mods"
+                    Header="Create Custom Commands"
+                    HeaderIcon="{ui:FontIcon Glyph=&#xE716;}"
+                    IsClickEnabled="True" />
+
 
                 <TextBlock
                     Style="{ThemeResource SubtitleTextBlockStyle}"
