--- a/src/GIMI-ModManager.WinUI/Views/ModsOverviewPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModsOverviewPage.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,9 +15,117 @@
 
     <Page.Resources>
 
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+
+        <Flyout
+            x:Key="CommandMenuFlyout"
+            Opening="CommandMenuFlyout_OnOpening"
+            Placement="BottomEdgeAlignedLeft"
+            ShouldConstrainToRootBounds="False">
+            <Grid MaxWidth="400" RowSpacing="4">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="Run Command on this folder:" />
+                    <Button
+                        Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        Command="{x:Bind ViewModel.OpenFolderCommand}"
+                        ToolTipService.ToolTip="Open Folder">
+                        <FontIcon Glyph="&#xE838;" />
+                    </Button>
+
+                </Grid>
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{x:Bind ViewModel.CommandDefinitions}"
+                    SelectionMode="None">
+                    <ListView.ItemTemplate>
+
+                        <DataTemplate x:DataType="viewModels:ModOverviewCommandVM">
+                            <Grid
+                                Margin="0,4,0,4"
+                                Padding="4"
+                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                ColumnSpacing="4"
+                                CornerRadius="4">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Spacing="4">
+                                    <TextBlock
+                                        TextTrimming="CharacterEllipsis"
+                                        ToolTipService.ToolTip="{x:Bind DisplayName}"
+                                        Text="{x:Bind DisplayName}" />
+
+
+                                    <StackPanel>
+                                        <TextBlock IsTextSelectionEnabled="True" Text="Full Command:" />
+                                        <TextBlock
+                                            Padding="6,0,0,0"
+                                            IsTextSelectionEnabled="True"
+                                            TextTrimming="CharacterEllipsis"
+                                            ToolTipService.ToolTip="{x:Bind FullCommand}"
+                                            Text="{x:Bind FullCommand}" />
+                                    </StackPanel>
+
+                                    <StackPanel>
+                                        <TextBlock IsTextSelectionEnabled="True" Text="Working Directory:" />
+                                        <TextBlock
+                                            Padding="6,0,0,0"
+                                            IsTextSelectionEnabled="True"
+                                            TextTrimming="CharacterEllipsis"
+                                            ToolTipService.ToolTip="{x:Bind WorkingDirectory}"
+                                            Text="{x:Bind WorkingDirectory}" />
+                                    </StackPanel>
+
+                                    <StackPanel>
+                                        <TextBlock IsTextSelectionEnabled="True" Text="'{{TargetPath}}:" />
+                                        <TextBlock
+                                            Padding="6,0,0,0"
+                                            IsTextSelectionEnabled="True"
+                                            Tag="TargetPathText"
+                                            TextTrimming="CharacterEllipsis"
+                                            ToolTipService.ToolTip="{x:Bind TargetPath, Mode=OneWay}"
+                                            Text="{x:Bind TargetPath, Mode=OneWay}" />
+                                    </StackPanel>
+
+
+                                </StackPanel>
+
+                                <Button
+                                    Grid.Column="1"
+                                    VerticalAlignment="Center"
+                                    Command="{x:Bind RunCommand}"
+                                    CommandParameter="{x:Bind}"
+                                    Content="Run"
+                                    Style="{ThemeResource AccentButtonStyle}" />
+                            </Grid>
+
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+
+        </Flyout>
+
 
         <DataTemplate x:Key="CategoryTemplate" x:DataType="viewModels:CategoryNode">
-            <TreeViewItem IsExpanded="False" ItemsSource="{x:Bind ModdableObjects}">
+            <TreeViewItem
+                ContextFlyout="{StaticResource CommandMenuFlyout}"
+                IsExpanded="{x:Bind IsExpanded, Mode=TwoWay}"
+                ItemsSource="{x:Bind ModdableObjects}"
+                Visibility="{x:Bind IsVisible, Mode=OneWay}">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Margin="0,0,10,0" />
                     <TextBlock Text="{x:Bind DisplayName}" />
@@ -26,7 +135,11 @@
 
 
         <DataTemplate x:Key="CharacterTemplate" x:DataType="viewModels:ModdableObjectNode">
-            <TreeViewItem IsExpanded="False" ItemsSource="{x:Bind Mods}">
+            <TreeViewItem
+                ContextFlyout="{StaticResource CommandMenuFlyout}"
+                IsExpanded="{x:Bind IsExpanded, Mode=TwoWay}"
+                ItemsSource="{x:Bind Mods}"
+                Visibility="{x:Bind IsVisible, Mode=OneWay}">
 
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -34,19 +147,22 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <StackPanel Orientation="Horizontal">
-                        <Image Width="32">
-                            <Image.Source>
-                                <BitmapImage DecodePixelWidth="32" UriSource="{x:Bind ImagePath}" />
-                            </Image.Source>
-                        </Image>
+                        <Grid CornerRadius="4">
+                            <Image Width="32">
+                                <Image.Source>
+                                    <BitmapImage DecodePixelWidth="32" UriSource="{x:Bind ImagePath}" />
+                                </Image.Source>
+                            </Image>
+                        </Grid>
+
                         <TextBlock Margin="4,0,4,0" />
-                        <TextBlock Text="{x:Bind ModdableObject.DisplayName}" />
+                        <TextBlock VerticalAlignment="Center" Text="{x:Bind ModdableObject.DisplayName}" />
                     </StackPanel>
 
                     <Button
+                        x:Name="GoToCharacterButton"
                         Grid.Column="1"
-                        Command="{Binding Path=GoToCharacterCommand, Mode=OneWay}"
-                        CommandParameter="{x:Bind ModdableObject}"
+                        Click="GoToCharacterButton_OnClick"
                         Content="Go to Character" />
 
                 </Grid>
@@ -54,8 +170,8 @@
             </TreeViewItem>
         </DataTemplate>
 
-        <DataTemplate x:Key="ModTemplate" x:DataType="models:ModModel">
-            <TreeViewItem>
+        <DataTemplate x:Key="ModTemplate" x:DataType="viewModels:ModModelNode">
+            <TreeViewItem ContextFlyout="{StaticResource CommandMenuFlyout}" Visibility="{x:Bind IsVisible, Mode=OneWay}">
                 <Grid>
 
                     <Grid.ColumnDefinitions>
@@ -64,17 +180,17 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Text="{x:Bind Name}" />
+                    <TextBlock VerticalAlignment="Center" Text="{x:Bind Mod.Name}" />
 
                     <controls:LinkButton
                         Grid.Column="1"
-                        Link="{x:Bind FolderPath}"
-                        Text="{x:Bind FolderName}"
-                        ToolTipService.ToolTip="Open skin folder" />
+                        Link="{x:Bind Mod.FolderPath}"
+                        ToolTipService.ToolTip="Open skin folder"
+                        Text="{x:Bind Mod.FolderName}" />
 
                     <StackPanel Grid.Column="2" Orientation="Horizontal">
                         <TextBlock Margin="0,0,4,0" Text="Added:" />
-                        <TextBlock Text="{x:Bind DateAdded}" />
+                        <TextBlock Text="{x:Bind Mod.DateAdded}" />
                     </StackPanel>
 
                 </Grid>
@@ -90,24 +206,61 @@
 
     </Page.Resources>
 
-    <Grid>
+    <Grid RowSpacing="8">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal">
+        <Grid>
 
-            <TextBlock
-                Margin="0,0,0,12"
-                HorizontalAlignment="Center"
-                FontSize="28"
-                Style="{StaticResource TitleTextBlockStyle}"
-                Text="Mods Overview" />
-        </StackPanel>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <StackPanel>
+                <TextBlock
+                    Margin="0,0,0,12"
+                    FontSize="28"
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    TextTrimming="CharacterEllipsis"
+                    Text="Mods Overview" />
+
+
+                <StackPanel
+                    Orientation="Horizontal"
+                    Spacing="16"
+                    Visibility="Collapsed">
+                    <Button Command="{x:Bind ViewModel.CloseOpenAllCommand}" Content="Open All" />
+                    <Button
+                        Command="{x:Bind ViewModel.CloseOpenAllCommand}"
+                        CommandParameter="Close"
+                        Content="Close All" />
+                </StackPanel>
+            </StackPanel>
+
+
+
+            <StackPanel
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal"
+                Spacing="16">
+                <AutoSuggestBox
+                    x:Name="SearchBox"
+                    MinWidth="200"
+                    VerticalAlignment="Center"
+                    PlaceholderText="Press Enter to search..."
+                    QuerySubmitted="SearchBox_OnQuerySubmitted" />
+            </StackPanel>
+
+
+        </Grid>
 
         <TreeView
+            x:Name="OverviewTreeView"
             Grid.Row="1"
             AllowDrop="False"
             CanDrag="False"
