--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPage.xaml
@@ -422,10 +422,10 @@
                                 Sorting="ModListGrid_OnSorting">
                                 <controls:DataGrid.Columns>
                                     <controls:DataGridTemplateColumn
-                                        Width="SizeToCells"
+                                        Width="SizeToHeader"
                                         CanUserResize="False"
                                         CanUserSort="True"
-                                        Header="ModEnabled"
+                                        Header="Enabled"
                                         Tag="IsEnabled">
 
                                         <controls:DataGridTemplateColumn.CellTemplate>
@@ -434,7 +434,10 @@
                                                     <CheckBox
                                                         Command="{x:Bind ToggleModCommand}"
                                                         IsChecked="{x:Bind IsEnabled, Mode=OneWay}"
-                                                        IsTabStop="False" />
+                                                        IsTabStop="False"
+                                                        Width="Auto"
+                                                        MinWidth="0"
+                                                        />
                                                 </Grid>
                                             </DataTemplate>
                                         </controls:DataGridTemplateColumn.CellTemplate>
@@ -446,7 +449,8 @@
                                         CanUserSort="False"
                                         Header=""
                                         IsReadOnly="True"
-                                        Tag="NotificationColumn">
+                                        Tag="NotificationColumn"
+                                        MinWidth="0">
                                         <controls:DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate x:DataType="models:ModModel">
 
