--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -251,10 +251,25 @@
                             </Flyout>
                         </AppBarButton.Flyout>
                     </AppBarButton>
-                    <AppBarButton
-                        Icon="Filter"
-                        IsEnabled="False"
-                        Label="Filters:" />
+                    <AppBarButton Icon="Filter" Label="Filters">
+
+                        <AppBarButton.Flyout>
+                            <Flyout>
+                                <ScrollViewer>
+                                    <StackPanel Spacing="8">
+                                        <ToggleButton
+                                            Command="{x:Bind ViewModel.ShowCharactersWithModsCommand}"
+                                            Content="{x:Bind ViewModel.ModToggleText, Mode=OneWay}"
+                                            IsChecked="{x:Bind ViewModel.ShowOnlyCharactersWithMods, Mode=OneWay}" />
+                                        <ToggleButton
+                                            Command="{x:Bind ViewModel.ShowOnlyCharactersWithModNotificationsCommand}"
+                                            Content="{x:Bind ViewModel.ModNotificationsToggleText, Mode=OneWay}"
+                                            IsChecked="{x:Bind ViewModel.ShowOnlyModsWithNotifications, Mode=OneWay}" />
+                                    </StackPanel>
+                                </ScrollViewer>
+                            </Flyout>
+                        </AppBarButton.Flyout>
+                    </AppBarButton>
                 </CommandBar>
                 <ScrollViewer HorizontalScrollBarVisibility="Auto">
                     <GridView
@@ -309,11 +324,7 @@
                 Grid.Column="3"
                 HorizontalAlignment="Right"
                 Orientation="Horizontal">
-                <ToggleButton
-                    Margin="0,0,8,0"
-                    Command="{x:Bind ViewModel.ShowCharactersWithModsCommand}"
-                    Content="{x:Bind ViewModel.ModToggleText, Mode=OneWay}"
-                    IsChecked="{x:Bind ViewModel.ShowOnlyCharactersWithMods, Mode=OneWay}" />
+
 
                 <AutoSuggestBox
                     x:Name="SearchBox"
