toggle mod keybind

--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/ModGrid.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/ModGrid.xaml
@@ -62,6 +62,7 @@
             FrozenColumnCount="3"
             GridLinesVisibility="All"
             ItemsSource="{x:Bind ViewModel.GridMods, Mode=OneWay}"
+            KeyDown="ModListGrid_OnKeyDown"
             SelectionChanged="ModListGrid_OnSelectionChanged"
             SelectionMode="Extended"
             Sorting="OnColumnSort">
