--- a/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/CharacterCard.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharacterDetailsPages/CharacterCard.xaml
@@ -3,6 +3,7 @@
     x:Class="GIMI_ModManager.WinUI.Views.CharacterDetailsPages.CharacterCard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views.CharacterDetailsPages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,6 +11,12 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ControlFillColorDefaultBrush}">
+
+        <Grid.Resources>
+            <Flyout x:Name="SelectInGameSkin">
+                <controls:SelectCharacterFromGrid GridSource="{x:Bind ViewModel.SelectableInGameSkins, Mode=OneWay}" ItemClickedCommand="{x:Bind ViewModel.SelectSkinCommand}" />
+            </Flyout>
+        </Grid.Resources>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -23,7 +30,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <Button AutomationProperties.AcceleratorKey="Escape">
+                <Button AutomationProperties.AcceleratorKey="Escape" Command="{x:Bind ViewModel.GoBackToGridCommand}">
                     <Button.KeyboardAccelerators>
                         <KeyboardAccelerator Key="Escape" IsEnabled="True" />
                     </Button.KeyboardAccelerators>
@@ -37,12 +44,18 @@
                     HorizontalAlignment="Right"
                     Orientation="Horizontal"
                     Spacing="20">
-                    <Button HorizontalAlignment="Center" ToolTipService.ToolTip="Go to character in Mods Overview">
+                    <Button
+                        HorizontalAlignment="Center"
+                        Command="{x:Bind ViewModel.GoToModsOverviewCommand}"
+                        ToolTipService.ToolTip="Go to character in Mods Overview">
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xEA37;" />
                     </Button>
 
 
-                    <Button HorizontalAlignment="Right" ToolTipService.ToolTip="Edit Character">
+                    <Button
+                        HorizontalAlignment="Right"
+                        Command="{x:Bind ViewModel.GoToCharacterEditScreenCommand}"
+                        ToolTipService.ToolTip="Edit Character">
                         <FontIcon Glyph="&#xE70F;" />
                     </Button>
                 </StackPanel>
@@ -88,23 +101,12 @@
                     VerticalAlignment="Center"
                     Style="{ThemeResource BodyTextStyle}"
                     Text="Tracked Mods:" />
-                <TextBlock Style="{ThemeResource BodyTextStyle}" Text="0" />
+                <TextBlock Style="{ThemeResource BodyTextStyle}" Text="{x:Bind ViewModel.TrackedModsCount, Mode=OneWay}" />
             </StackPanel>
 
-            <StackPanel
-                Margin="0,8"
-                HorizontalAlignment="Center"
-                Orientation="Horizontal">
-                <TextBlock
-                    Margin="0,0,4,0"
-                    VerticalAlignment="Center"
-                    Style="{ThemeResource BodyTextStyle}"
-                    Text="Mod Folder Size:" />
-                <TextBlock Style="{ThemeResource BodyTextStyle}" Text="0 GB" />
-            </StackPanel>
 
             <StackPanel
-                x:Name="SelectSkinBox"
+                x:Name="selectSkinBox"
                 Padding="8"
                 Background="{ThemeResource ControlFillColorDefaultBrush}"
                 Visibility="{x:Bind ViewModel.IsCharacter, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
@@ -117,11 +119,13 @@
                     FontFamily="{StaticResource GenshinFont}"
                     IsTextSelectionEnabled="True"
                     TextWrapping="WrapWholeWords"
-                    Text="{x:Bind ViewModel.SelectedInGameSkin.DisplayName, Mode=OneWay, FallbackValue=Default}" />
+                    Text="{x:Bind ViewModel.SelectedSkin.DisplayName, Mode=OneWay, FallbackValue=Default}" />
                 <Button
                     Margin="0,16,0,0"
                     HorizontalAlignment="Center"
-                    Content="Select Skin">
+                    Content="Select Skin"
+                    Flyout="{StaticResource SelectInGameSkin}"
+                    IsEnabled="{x:Bind ViewModel.CanChangeInGameSkins, Mode=OneWay}">
 
                     <Button.KeyboardAccelerators>
                         <KeyboardAccelerator Key="F1" />
@@ -132,12 +136,5 @@
 
 
         </StackPanel>
-
-        <Button
-            Grid.Row="1"
-            Margin="0,8,0,8"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Bottom"
-            Content="Disable All Mods" />
     </Grid>
 </UserControl>
